--- a/neptune-be/package.json
+++ b/neptune-be/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "stripe": "^9.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
