--- a/client-site/package.json
+++ b/client-site/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "stripe-sample",
+  "name": "client-site",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@stripe/react-stripe-js": "^1.0.0",
-    "@stripe/stripe-js": "^1.0.0",
-    "express": "^4.17.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "^3.4.0",
-    "stripe": "^8.202.0"
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "concurrently": "4.1.2"
-  },
-  "homepage": "http://localhost:3000/checkout",
-  "proxy": "http://localhost:4242",
   "scripts": {
-    "start-client": "react-scripts start",
-    "start-server": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start": "concurrently \"npm run start-client\" \"npm run start-server\""
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
