[NEP-48] - Dev dash client messages

--- a/neptune-fe/package.json
+++ b/neptune-fe/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@shopify/polaris": "^9.21.0",
+    "@stripe/ui-extension-sdk": "^8.1.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
