--- a/client-site/package.json
+++ b/client-site/package.json
@@ -7,7 +7,6 @@
     "@stripe/stripe-js": "^1.32.0",
     "@stripe/ui-extension-sdk": "^8.1.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "nes.css": "^2.3.0",
@@ -42,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "tailwindcss": "^3.1.6"
   }
 }
