--- a/neptune-be/package.json
+++ b/neptune-be/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "serverless-http": "^3.0.2",
     "stripe": "^9.4.0"
   },
   "devDependencies": {
