--- a/client-site/public/manifest.json
+++ b/client-site/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Client Storefront",
+  "name": "Neptune Client Storefront Example",
   "icons": [
     {
       "src": "favicon.ico",
