--- a/neptune-fe/public/manifest.json
+++ b/neptune-fe/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Neptune Commerce",
+  "name": "Neptune Commerce Platform",
   "icons": [
     {
       "src": "favicon.ico",
